# AgenticSports

./: .gitignore  LICENSE  RALPH-WORKFLOW.md  README.md  VISIONPLAN_EVALUATION.md  WORKFLOW.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: deploy.yml
src/: config.py
src/agent/: actions.py  agent_loop.py  assessment.py  autonomy.py  coach.py  conversation.py  json_utils.py  llm.py  onboarding.py  plan_evaluator.py  planner.py  proactive.py  prompts.py  reflection.py  router.py  startup.py  startup_context.py  state_machine.py  system_prompt.py  trajectory.py
src/api/: auth.py  sse.py  (+1 more)
tests/: acceptance_criteria.py  conftest.py  deep_inspect.py  ralph_harness.py  ralph_scenarios.py  ralph_validator.py  scenario_test.py  scenario_test_v3.py  test_action_space.py  test_active_compression.py  test_active_memory.py  test_activity_context.py  test_agentic_compliance.py  test_config_consolidation.py  test_config_versioning.py  test_cross_sport_prompt.py  test_define_periodization.py  test_define_trigger_rule.py  test_dynamic_evaluator.py  test_episode_consolidation.py  test_final_validation.py  test_garmin_sync.py  test_goal_trajectory_tools.py  test_hardcoded_rules.py  test_harness.py  test_health_inventory_tools.py  test_health_planning.py  test_health_trend_tools.py  test_macrocycle_tools.py  test_mid_conversation_proactivity.py  test_onboarding_prompt.py  test_phase8_integration.py  test_plan_evaluator.py  test_product_tools.py  test_rls_audit.py  test_router.py  test_semantic_dedup.py  test_session_summarizer.py  test_setup.py  test_spawn_tool.py  (+15 more)
(+71 files in other folders)
